# pirates

./: Base.hs  Core.hs  DESIGN  Main.hs  Ship.hs  pirates.cabal
Pirates/: Base.hs  Ship.hs
